# axiart

./: .gitignore  ARTISTIC_GUIDE.md  CLAUDE.md  README.md  RUST_PERFORMANCE.md  analysis.json  analyze.py  axiart_diagram.py  ghost_protocol_halloween.py  pyproject.toml  test_final_dendrite.py  test_lsystem.py  test_noisepattern.py  test_truchet.py  test_voronoi.py  test_wrapper.py  visualize_infographic.py  visualize_v3.py
.claude/skills/code-diagram-generator/: README.md  SKILL.md  generator.py
.github/workflows/: README.md  ci.yml  debug.yml  minimal-build.yml  test-matrix.yml
adhoc-tests/: test_dendrite_rust.py  test_flowfield.py  test_grid.py  test_spiral.py
axiart/: __init__.py  composition.py  shapes.py  svg_exporter.py
axiart-core/: Cargo.toml
axiart-core/src/: dendrite.rs  flow_field.rs  grid.rs  lib.rs  lsystem.rs  noise_core.rs  noise_pattern.rs  spiral.rs  truchet.rs  voronoi.rs
axiart/patterns/: __init__.py  dendrite.py  dendrite_rust.py  flow_field.py  grid.py  lsystem.py  noise.py  spiral.py  truchet.py  voronoi.py
diagrams/: axiart_philosophy.md
examples/: claude_portrait.py  convert_to_png.py  example_abstract_character.py  example_dendrite.py  example_flow.py  example_grid.py  example_lsystem.py  example_mixed_geometric.py  example_mixed_landscape.py  example_mixed_organic.py  example_noise.py  example_portrait.py  example_portrait_trevor.py  example_portrait_trevor_detailed.py  example_self_portrait_claude.py  example_self_portrait_flow.py  example_self_portrait_mandala.py  example_showcase.py  example_simple_starter.py  example_spiral.py  example_truchet.py  example_voronoi.py  example_warped_space.py  generate_portrait.py  generate_quality_portrait.py  portrait_v2_consciousness.py
