[project]
name = "axiart"
version = "0.1.0"
description = "Generative art system for AxiDraw V3 pen plotter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "svgwrite>=1.4.3",
    "noise>=1.2.2",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "axiart.axiart_core"
bindings = "pyo3"
features = ["pyo3/extension-module"]
manifest-path = "axiart-core/Cargo.toml"

[tool.black]
line-length = 100
target-version = ['py39']
